removed unused functions in peer classes and reduced warnings. and fix for testTimedoutRead